--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@
 body {
     background-color: #f8f9fa;
     font-family: Arial, sans-serif;
-    padding-top: 90px; /* Ajuste aumentado para acomodar a navbar fixa */
+    padding-top: 90px; 
 }
 
-/* Estilo da página de login */
+/* página de login */
 #loginPage {
-    background-image: url('/images/fundo (2).svg'); /* Substitua pelo caminho correto da sua imagem */
+    background-image: url('/images/fundo (2).svg'); 
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
