--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
   <title>Login - Financeiro</title> 
   <link rel="icon" href="images/ifood_logo-baixa 1.svg"> 
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet"> 
-  <link rel="stylesheet" href="style.css"> 
+  <link rel="stylesheet" href="/style.css"> 
 </head>
 <body id="loginPage"> 
   <div class="container d-flex justify-content-center align-items-center vh-100"> 
@@ -23,7 +23,7 @@
         <div class="form-group mb-3">
           <input type="password" class="form-control" id="password" placeholder="Senha (Não precisa)" required> 
         </div>
-        <a href="dashboard.html" class="btn btn-danger btn-block">Entrar</a> 
+        <a href="/views/dashboard.html" class="btn btn-danger btn-block">Entrar</a> 
         <!-- Botão de login (redireciona para dashboard.html) -->
         <div class="mt-3">
           <a href="#">Esqueceu a senha?</a> 
