--- a/views/relatorio.html
+++ b/views/relatorio.html
@@ -6,7 +6,7 @@
     <title>Dashboard Financeiro</title> 
     <link rel="icon" href="images/ifood_logo-baixa 1.svg" type="image/png"> 
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="/style.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -20,9 +20,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav"> <!-- Conteúdo da barra de navegação -->
             <ul class="navbar-nav mx-auto"> 
-                <li class="nav-item"><a class="nav-link" href="dashboard.html">Dashboard</a></li>
-                <li class="nav-item"><a class="nav-link" href="transacoes.html">Transações</a></li>
-                <li class="nav-item"><a class="nav-link" href="relatorio.html">Relatório e análises financeiras</a></li>
+                <li class="nav-item"><a class="nav-link" href="/views/dashboard.html">Dashboard</a></li>
+                <li class="nav-item"><a class="nav-link" href="/views/transacoes.html">Transações</a></li>
+                <li class="nav-item"><a class="nav-link" href="/views/relatorio.html">Relatório e análises financeiras</a></li>
             </ul>
             <div class="d-flex align-items-center"> <!-- Botões e dropdown -->
                 <button class="btn btn-outline-info mr-3">Nota Fiscal ⇩</button>
@@ -34,7 +34,7 @@
                         <a class="dropdown-item" href="#">Meu Perfil</a>
                         <a class="dropdown-item" href="#">Configurações</a>
                         <a class="dropdown-item" href="#">Central de ajuda</a>
-                        <a class="dropdown-item" href="index.html">Sair</a>
+                        <a class="dropdown-item" href="/views/index.html">Sair</a>
                     </div>
                 </div>
                 <div class="notification-bell ml-3" onclick="toggleNotifications()"> <!-- Sino de notificações -->
