--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Financeiro</title>
-    <link rel="icon" href="images/ifood_logo-baixa 1.svg" type="image/png"> 
+    <link rel="icon" href="/images/ifood_logo-baixa 1.svg" type="image/png"> 
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/style.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top"> <!-- Barra de navegação -->
         <a class="navbar-brand d-flex align-items-center" href="#">
-            <img src="./images/ifood_logo-baixa 1.svg" alt="iFood Logo" class="logo-navbar mr-2"> 
+            <img src="/images/ifood_logo-baixa 1.svg" alt="iFood Logo" class="logo-navbar mr-2"> 
             <span class="h4 font-weight-bold">Financeiro</span>
         </a>
         
@@ -150,21 +150,21 @@
                                     <tbody>
                                         <tr>
                                             <td>1º</td>
-                                            <td><img src="./images/açai.svg" alt="Açaí 500 ml" class="img-thumbnail"></td>
+                                            <td><img src="/images/açai.svg" alt="Açaí 500 ml" class="img-thumbnail"></td>
                                             <td>Açaí 500 ml</td>
                                             <td>390</td>
                                             <td>R$ 5.850,00</td>
                                         </tr>
                                         <tr>
                                             <td>2º</td>
-                                            <td><img src="./images/Smash burger.svg" alt="Smash burger" class="img-thumbnail"></td>
+                                            <td><img src="/images/Smash burger.svg" alt="Smash burger" class="img-thumbnail"></td>
                                             <td>Smash burger</td>
                                             <td>283</td>
                                             <td>R$ 5.462,10</td>
                                         </tr>
                                         <tr>
                                             <td>3º</td>
-                                            <td><img src="./images/coca.svg" alt="Coca 350 ml" class="img-thumbnail"></td>
+                                            <td><img src="/images/coca.svg" alt="Coca 350 ml" class="img-thumbnail"></td>
                                             <td>Coca 350 ml</td>
                                             <td>230</td>
                                             <td>R$ 1.035,00</td>
