--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - Financeiro</title> 
-  <link rel="icon" href="images/ifood_logo-baixa 1.svg"> 
+  <link rel="icon" href="/images/ifood_logo-baixa 1.svg"> 
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet"> 
   <link rel="stylesheet" href="/style.css"> 
 </head>
@@ -13,7 +13,7 @@
     <!-- Container principal que centraliza o conteúdo na tela -->
     <div class="login-box p-5 text-center"> 
       <!-- Caixa de login -->
-      <img src="images/ifood_logo-baixa 1.svg" alt="iFood Logo" class="mb-3"> 
+      <img src="/images/ifood_logo-baixa 1.svg" alt="iFood Logo" class="mb-3"> 
       <h3 class="text-dark mb-4">Financeiro</h3> 
       
       <form> <!-- Formulário de login -->
