--- a/views/relatorio.html
+++ b/views/relatorio.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard Financeiro</title> 
-    <link rel="icon" href="images/ifood_logo-baixa 1.svg" type="image/png"> 
+    <title>Relatório e análises financeiras</title> 
+    <link rel="icon" href="/images/ifood_logo-baixa 1.svg" type="image/png"> 
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/style.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top"> <!-- Barra de navegação -->
         <a class="navbar-brand d-flex align-items-center" href="#">
-            <img src="./images/ifood_logo-baixa 1.svg" alt="iFood Logo" class="logo-navbar"> 
+            <img src="/images/ifood_logo-baixa 1.svg" alt="iFood Logo" class="logo-navbar"> 
             <span class="h4 font-weight-bold">Financeiro</span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
