--- a/views/transacoes.html
+++ b/views/transacoes.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/style.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-<body class="finance-page"> <!-- Corpo da página -->
+<body> <!-- Corpo da página -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top"> <!-- Barra de navegação -->
         <a class="navbar-brand d-flex align-items-center" href="#">
             <img src="/images/ifood_logo-baixa 1.svg" alt="iFood Logo" class="logo-navbar"> 
