atualizado o click.js agora é navbar-vermelho.js

--- a/views/relatorio.html
+++ b/views/relatorio.html
@@ -153,6 +153,6 @@
     <script src="/js/relatorio.js"></script> <!-- Script do relatório -->
     <script src="/js/notificao.js"></script> <!-- Script das notificações -->
     <script src="/js/pdf-resumo.js"></script> <!-- Script para gerar PDF do resumo -->
-    <script src="/js/click.js"></script> <!-- Script para eventos de clique -->
+    <script src="/js/navbar-vermelho.js"></script> <!-- Script para eventos de clique -->
 </body>
 </html>
