--- a/views/transacoes.html
+++ b/views/transacoes.html
@@ -157,6 +157,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
     <script src="/js/notificao.js"></script> <!-- Script das notificações -->
     <script src="/js/pdf-transacoes.js"></script> <!-- Script para gerar PDF das transações -->
-    <script src="/js/click.js"></script> <!-- Script para eventos de clique -->
+    <script src="/js/navbar-vermelho.js"></script> <!-- Script para eventos de clique -->
 </body>
 </html>
