--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -370,6 +370,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="/js/notificao.js"></script> <!-- Script das notificações -->
     <script src="/js/dashboard.js"></script> <!-- Script do dashboard -->
-    <script src="/js/click.js"></script> <!-- Script para eventos de clique -->
+    <script src="/js/navbar-vermelho.js"></script> <!-- Script para eventos de clique -->
 </body>
 </html>
